# predicition_delivery_time

./: Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
monitoring/: EvidentlyAI.ipynb
monitoring/data/: deliverytime_test_monitoring.csv  deliverytime_train_monitoring.csv  model_performance.html
monitoring/report/: data_drift.html  model_performance.html
prediction_delivery_time/: __init__.py  config.yml  pipeline.py  predict.py  train_pipeline.py
prediction_delivery_time/config/: core.py
prediction_delivery_time/processing/: data_manager.py  features.py  validation.py
prediction_delivery_time/trained_models/: prediction_delivery_time_model_output0.0.1.pkl
serve/: run.sh
serve/app/: app.py  config.py  database.py  models.py  router.py
serve/app/schemas/: schema.py
tests/: conftest.py  test_check.ipynb  test_pipeline.py  test_predict.py  test_train_pipeline.py
tests/config/: test_core.py
tests/test_processing/: test_data_manager.py  test_features.py  test_validation.py
utils/: load_data.py  report.py
